* When looking at incoming command messages (monitor.cpp), check against all local addresses, not just the "hostname"
* mk5erase: ask before continuing on write-protected module (even if force is specified)
* mk5dir: save a copy of the binary directory as well as the decoded directory
* Revamped support for Mark5 directory structures: vsn, mk5dir

Version 2.3.0
~~~~~~~~~~~~~
* mk5dir: support SDK9 legacy directories (as per DIMINO 2.2.1 w/ SDK 9.2)
* mk5cp: add mode to "fix" Mark5B format scans
* mk5putdir: new utility: replace the on-disk directory
* mark5 utilities: normalize use of RT mode a bit
* mk5dir: default: operate without RT mode
* mk5dir: detect unusual data while decoding directories, namely data where the payload contains a repeating pattern.
* mk5test: new utility: use XLRSelfTest to test a Streamstor card
* mk5dir: better VDIF support
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
* Speed up directory reading
* Better .rpm infrastructure
* IPv6 support added to VSI interface; the whole package at this point is likely IPv6 compliant.
* Count network traffic from all interfaces, not just eth* and ib*.  lo is ignored.
* Fixed bugs preventing packet length filtering working in record5c
* Allow case mismatches in VSI processing
* Respect -u option when calling system commands
* -n option allows enables running external commands without su
* obtain full path to difxlog by reading $DIFXROOT environment
* check for mk5daemon already running
* fileto5c: fix order of ops bug
* fileto5c: copying of directory supported
* now *mark5* identifies a Mark5 unit, not just mark5*
* For VDIF format, save the threads to the .dir file
* Fix for bank_info query with only bank B populated
* Mark5 Watchdog added to mk5daemon proper
* Version for DiFX-2.2, May 31, 2013

Version 2.1.0
~~~~~~~~~~~~~
* Rename from 1.4.2 prior to DiFX-2.1 tagging
* Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Post DiFX-2.0.1
* Add SMART dump option to vsn